--- a/Daily/20201028-TIL.md
+++ b/Daily/20201028-TIL.md
@@ -16,20 +16,22 @@
       - 여기서 강조되는 객체지향의 특징은 다형성으로 각 객체들이 모듈화 되어 유연하고 변경이 용이하게 설계되는 것이다
       - 모듈화와 유연하고 용이하게 설계된 다는 것은 객체들이 역할과 구현이 분리되어 어떤 역할에 맞춰서 여러 구현체들이 교체되서 사용될 수 있게 만드는 것을 뜻한다 
         - 예를 들면 자동차라는 역할이 있고 구체적인 차종 K3, 아반떼 , 그랜져 같은 차종들이 교체되서 사용자는 차종에 상관없이 자동차의 역할만 이해하고 사용할 수 있으면 구현체들은 어떤것들이라도 사용할 수 있는 것을 말한다
-        - 하나의 더 예를 들면 연극 로미오와 줄리엣에 역할이 있다면 그것을 연기하는 배우는 여러 배우들이 맡는 것을 말한다. 그러면 
+        - 하나의 더 예를 들면 연극 로미오와 줄리엣에 역할이 있다면 그것을 연기하는 배우는 여러 배우들이 맡는 것을 말한다. 역할이 존재하면 배우들은 교체되면서 연극이 진행될 수있는 것처럼 기능들의 역할을 정의하면 다양한 기능들을 유연하게 교체하고 확장할 수 있음을 뜻한다
 
       - 여기서 말하는 역할과 구현은 JAVA에서는 인터페이스와 그 구현체로 구성되어 진다
         - 그렇기 때문에 인터페이스의 설계가 엄청나게 중요한데 역할이 잘구현되어 있어야 사용자들이 어떤 구현체가들어와도 불편함없이 사용할수 있기 때문이다
+        - 프로젝트할때 동료가 인터페이스 설계가 엄청나게 중요하다고 왜그렇게 강조했는지 이해가 되는 부분이 었다
       - 여기서 사용자는 다른 객체를 뜻하고 객체간에도 클라이언트와 서버가 존재한다는 것도 배웠다
-        - 의존관계도 여기서 발생하는게 아닌가 생각이 든다.
+    - 의존관계도 여기서 발생하는게 아닌가 생각이 든다.
+        - 그리고 이런 서버 클라이언트 관계를 스프링은 자동으로 해주는 것이다. -> 이것이 얼마나 유용한지는 직접 경험해봐야 알것 같다
 
     - 프로젝트와 스프링 입문강의를 통해 인터페이스를 통해 구현체들을 바꿔가면서 사용하는 예제들을 봤기 때문에 이해하기가 좋았고 그게 스프링의 핵심요소라고하니 다형성을 어떻게 잘 구현할지에 대한 부분에 집중해야겠다는 생각이 들었다.
-
+  
   - 인성면접 준비
-
-    - 스프링 맛보기 강의가 끝나고 인성면접에 관한 강의들을 들었다
+  
+  - 스프링 맛보기 강의가 끝나고 인성면접에 관한 강의들을 들었다
       - 인성면접은 내인성을 보여주는게 아니라 내가 업무 어울리고  성과를 내기에 좋은 인성을 가진 것인지 알아보는 면접이라는 것에 목적을 두고 답안을 준비하면 되는 것 같다
-
+  
 - 준비시간
   
   - 아침루틴
@@ -39,7 +41,7 @@
 - 아침 공부시간
   - HTML & CSS 수업
     - 오랜만에 다시 듣는 수업인데 그래도 생활코딩을 들은 효과인걸까 조금이나마 익숙해진 상태에서 들을 수 있어서 지난번보단 많이 이해를 했다
-      - 하지만 css부분에 foat에서는 직관적이지 않은 부분들이 있어서 조금더 보충 공부가 필요할 것 같다 
+      - 하지만 css부분에 float에서는 직관적이지 않은 부분들이 있어서 조금더 보충 공부가 필요할 것 같다 
     - 강사님이 정말 열정적으로 잘 가르쳐주셔서 나도 더 열심히 하게 되는 것 같다. 어떻게 저런 자세 유지하고 살수있을까 배우고 싶다
 
 - 오후 공부시간
@@ -52,11 +54,11 @@
   - DB수업, HTMl수업, java보강까지 진행되고 있어서 어느 때보다 시간을 효과적으로 써야하는 상황이 되었다. 다음 수업에 필요한 것부터 우선순위를 정해서 최대한 복습을 해야될 것 같다
 
   - HTML&CSS 복습
-    - 수업 노트한것 + 실습한것 위주로 복습을 시작하였다
+    - 수업 노트한 것 + 실습한것 위주로 복습을 시작하였다
       - 처음에 구조설계하는 것부터 원칙을 가지고 하나하나 해나가는 과정들을 보여주셔서 프론트엔드가 이렇게 진행되는 구나 하고 이해에 도움이 많이 되는 것 같고 제대로 배우는 것 같아서 기분이 좋다
       - 정리를 시작했는데 생각보다 개념들이 잘 이해가 되지 않는다. 특히 float과 clear: both에 관한 개념이 잘 이해가 가지 않는데 개념을 아직 잘이해하지 못한 것 같다..
         - 이부분은 수업한내용을 다시들어도 잘이해가 가지 않아서 조금더 검색과 영상을 통해 이해해보려고 노력했다
-      - 깔끔하게 정리되면 좋지만 그렇지 않은 부분이 많아서 아쉽다
+        - 깔끔하게 정리되면 좋지만 그렇지 않은 부분이 많아서 아쉽다
       - DB문 복습하고 시간이 남아서 빠르게 전체를 한번 더 읽으면서 복습했다.. 깊이가 없어서 아쉽지만 아까보다는 조금더 정리가 되는 것 같아서 다행이다
     
   - 간단히 DB 복습
@@ -76,7 +78,7 @@
 - 3가지 과목이 동시에 진행되면서 공부할 내용은 많아지고 복습할 시간은 부족해지니 공부 효율이 많이 떨어지기 시작한다. 마음만 급해서 하나쭉 보는데 잘이해 못해서 복습에 효과가 없고 다른것도 그렇게 보고 있으니 시간만 들어가고 복습은 잘이루어지지 않는다.
   - 수업시간당 X2정도는 복습을 해야 배운것을 습득할 수 있는데 현재 하루에 7시간씩 수업을 하기 때문에 복습시간이 14시간이 필요한데 실제 공부할수 있는 시간은 3시간 30분정도이다. 
   - 이럴 땐 정상체제에서 처럼 공부를 할 수 없음을 인정하고 어떻게든 방법을 찾아내야될 것 같다
-- 공부한 내용은 쌓이는데 java외에는 어떻게 git이나 블로그에 어떻게 정리할지 방향이 안잡힌다.. 하면 좋을 것같은데 방법 찾아봐야될 것 같다
+- 공부한 내용은 쌓이는데 java외에는 어떻게 git이나 블로그에 어떻게 정리할지 방향이 안잡힌다.. 정리를 해놓는게  좋을 것같은데 방법 찾아봐야될 것 같다
 
 # 내일 공부할 내용
 
