--- a/Daily/20201029-TIL.md
+++ b/Daily/20201029-TIL.md
@@ -14,15 +14,16 @@
     - 스프링 강의가 끝나고 어떤 강의를 들을까 고민하다가 이 시간 활용해서 취업과 관련된 정보들을 얻는게 도움이 되지 않을까 싶어서 어제 보던 면접중비 영상을 보기시작했다
     
   - 좋은 유튜버를 찾아서 잘정리되어있는 내용들을 접할 수 있어서 한동안은 쭉 따라가면서 정리하면될 것같다
-        - 면접준비와 자기소개서는 동시에 준비되어야하고 자기소개서의 내용과 면접에 내용이 서로 연관되는 것이 맞다
-          - 면접에 나올만한 질문들을 정리해서 써보고 그것을 간추려 자기소개서로 만들어보고 또 그것을 바탕으로 다시 면접을 준비하면 더좋은
-            - 면접과 자기소개서에 핵심은 경험으로 직무와 유사한 경험 -> 성공사레 -> 거기서 얻은 인사이트 순으로 정리가되면 베스트이다
-          - 지금 내가 쌓을 수 있는 경험어떤게 있고 내가 가진 경험중에 어울릴만한게 어떤게 있는지 생각해봐야될 문제인 것 같다
-            - 면접 때 나올 수밖에 없는 핵심 질문들과 그와 유사한 질문들에 대해서는 미리 정리해두는게 맞는 것 같다. 
-    
+
+    - 면접준비와 자기소개서는 동시에 준비되어야하고 자기소개서의 내용과 면접에 내용이 서로 연관되는 것이 맞다
+    - 면접에 나올만한 질문들을 정리해서 써보고 그것을 간추려 자기소개서로 만들어보고 또 그것을 바탕으로 다시 면접을 준비하면 더좋은
+    - 면접과 자기소개서에 핵심은 경험으로 직무와 유사한 경험 ->  성공사레 -> 거기서 얻은 인사이트 순으로 정리가되면 베스트이다
+    - 지금 내가 쌓을 수 있는 경험어떤게 있고 내가 가진 경험중에 어울릴만한게 어떤게 있는지 생각해봐야될 문제인 것 같다
+    -  면접 때 나올 수밖에 없는 핵심 질문들과 그와 유사한 질문들에 대해서는 미리 정리해두는게 맞는 것 같다. 
+
       - 그리고 그 결과를 계속 수정해서 발전시켜놓는다면 더 빠른 취업에 도움이 될 것 같다
         - 지금은 일반적인 면접에 대해서 알아보고 있지만 좀더 개발자 취업에 관련된 자료를 찾아보는것도 좋은 방향인 것 같다
-  
+
 - 준비시간
 
   - 채용공고 읽기
@@ -82,23 +83,27 @@
 
           - 폼태그는 type을 지정할 수 있어 다양한 입력방식을 검증해주고 플러스로 정규식을 통해 입력을 검증하게 된다고 하셨다
 
+          - 마지막으로 여러가지 form들을 검색할 수 있는 방법을 알려주시고 따로 공부해보라고 말씀해주셨다
+      
             
 
     - 용어정리
 
       - 뷰포트(ViePort): 브라우저에서 화면 크기를 이야기하며 메뉴바, 탭영역 등을 제외한 순수 화면 영역. 디바이스 크기와, 각각의 브라우저마다 계산되는 영역이 달라 같은 웹페이지라도 환경에 따라 달라게된다.
 
-      - form 태그: 웹페이지에서의 입력양식을 의미한다. ex) 로그인 창, 회원 가입폼 등
+      - form 태그: 웹페이지에서의 입력양식을 의미한다. ex) 로그인 창, 회원 가입폼 등 
 
+        - form태그는 추상태그로 실제 사용은 다른태그들을 사용한다고 한다
+    
         
-
+    
     - 느낀점
-
-      - 수업을 들으며 어제처럼 열심히 타자를 치면서 들으려고하는데 어느순간 타자를 치다가 자꾸 강의를 놓친 부분이 많이 생기기 시작하고 집중에 오히려 방해가 된다는 생각이 들었다
+    
+    - 수업을 들으며 어제처럼 열심히 타자를 치면서 들으려고하는데 어느순간 타자를 치다가 자꾸 강의를 놓친 부분이 많이 생기기 시작하고 집중에 오히려 방해가 된다는 생각이 들었다
         - 그래서 녹음하는것을 믿고 강의에 집중하고 하나라도 더 열심히 강사님 말씀듣고 하시는것들 보고 해보려고 했더니 도움이 많이 되었다.
         - 수업듣기와 참여 메모까지 함께하는 것은 정말 쉽지 않은일이긴 한데 수업마다 스타일이 있기 때문에 어떤것에 중점을 두고 수업에 참여할지도 생각해볼 문제인 것 같다
         - 복습하려고 보니 전체적인 진행 방향이라도 메모해놓는게 더 좋은 방법 같다. 쉬는 시간을 활용해서라도 그렇게 해놓으면 나중에 복습할 때 수업한 내용들을 떠올리며 정리해나가 더 좋을 것 같다
-
+  
 - 오후 공부시간
   - DB day5 수업
 
@@ -128,14 +133,14 @@
         - 또한 SQL 문으로 백업하는 Logical Backup과 파일 자체를 백업하는 Physical Backup이 있다는 것도 배웠다
           - 우리가 실습할 때 DB를 만들고 SQL문을 실행해주어서 데이터를 채워 넣었는데 그 SQL문이 Logical Backup이 된 것을 복원한 것이었다
           - 백업할 데이터의 양이 너무 많으면 어쩔수없이 Physical Backup을 하지만 양이 적당하면 안정적인 Logical Backup을 많이 사용한다고 말씀해주셨다
-        - 실습해 본것은 Hot Logical Backup으로 backup shell script를 작성하고 그것을 crontab을 이용해 주기적으로 실행하여 백업 결과를 backup폴더에 저장하도록 하였다
+        - 실습해 본것은 Hot Logical Backup으로 backup shell script를 작성하고 그것을 crontab을 이용해 주기적으로 실행하여 백업 결과를 backup 폴더에 저장하도록 하였다
           - shell script 문법은 거의 접해보지 못했는데 간단하게나마 접해볼 수 있는 기회가 되는 실습이었다
           - 수업 진도가 바쁘셨는지 백업만 실습하고 복원하는건 안하시고 그냥 넘어가셨는데 따로 실습을 해보면 좋을 것 같다
           - Cold Physical Backup도 따로 실습해보라고 당부하셨으니 같이 진행하면 좋을 것 같다
 
       - 마지막으로 Master-Slave를 DB를 만들어  동기화하는 하는 것을 실습하였다
 
-        - 여기서 Master는 입출력이 가능하고 Slave는 Master에 동기화되어 입력은 안되고 출력만 가능하도록 하여 크라이언트들에 출력 응답을 분산하여 대응하는 방식으로 사용된다고 한다
+        - 여기서 Master는 입출력이 가능하고 Slave는 Master에 동기화되어 입력은 안되고 출력만 가능하도록 하여 클라이언트들에 출력 응답을 분산하여 대응하는 방식으로 사용된다고 한다
           - 서비스에서 대부분의 요청은 입력보다 출력이 압도적으로 많기 때문에 출력 요청을 효과적으로 분산시켜줄 수 있는 SlaveDB를 여러개 두기도 한다고 한다
         - 두개의 다른 인스턴스를 생성하여 각각의 서버에 MySQL을 설치하고 동일한 이름의 DB를 각각 생성하고 한쪽은 Master 설정을하고 한쪽은 Slave설정을 하면서 동기화하였다
           - 동기화 이후 Master에서 Table을 생성하고 Insert를 하였더니 Slave에서 잠시뒤 동기화 하여 똑같은 결과를 출력해 볼 수 있었다
@@ -146,7 +151,7 @@
     - 용어정리
 
       - CLI(Command LIne Interface): 명령줄 인터페이스
-      - MTA: MAil Transfer Agent
+      - MTA: Mail Transfer Agent
 
       
 
@@ -155,6 +160,7 @@
       - HTMl 수업시간에 영향으로 메모보다는 수업에 집중해보자는 마음으로 열심히 따라갔더니 다행히 수업 실습이 속도감이 있었던 것에 비해 잘 따라갈 수 있었다. 
         - 중요한부분만 간단히 메모해놓고 열심히 수업 자체에 집중하는 것도 좋은 방법이 될 것 같다
         - 다만 복습할 때 얼마나 자료활용할 수 있을지는 생각해 볼 문제인 것 같다
+      - 주말동안 실습해볼 예제들이 많이 있어서 시간을 충분히 잡아놓고 실습해야될 것 같다
       
       
 
