--- a/Daily/20201101-TIL.md
+++ b/Daily/20201101-TIL.md
@@ -49,9 +49,9 @@
     - 질문들 답변 해보기
 
       - 1분 자기 소개
-        - 안녕하십니까 저는 백엔드 개발 직무에 지원한 나영원 입니다. 저는 지난 3개월간 프로그래밍 언어인 java와 웹 어플리케이션 전반에 대한 기초 지식을 공부하였고 그것을 바탕으로 미니프로젝트 진행하여 어플리케이션 개발 경험을 쌓았습니다. 또한  앞으로 배울 spring framework과 이를 활용한 프로젝트 경험을 통해서 실제 서비스에서 활용할 수 있는 백엔드 개발에 대한 지식과 경험을 쌓아 서비스가 안정적으로 제공될 수 있는 서버를 설계하여 신뢰성과 확장성을 가진 서비스를 구현하는데 기여하고 싶습니다
+        - 안녕하십니까 저는 백엔드 개발 직무에 지원한 나영원 입니다. 저는 지난 3개월간 프로그래밍 언어인 java와 웹 어플리케이션 전반에 대한 기초 지식을 공부하였고 그것을 바탕으로 미니프로젝트 진행하여 어플리케이션 개발 경험을 쌓았습니다. 또한  앞으로 배울 spring framework과 이를 활용한 프로젝트 경험을 통해서 실제 서비스에서 활용할 수 있는 백엔드 개발에 대한 지식과 경험을 쌓아 서비스가 안정적으로 제공될 수 있는 서버를 설계및 유지보수 하여 신뢰성과 확장성을 가진 서비스를 구현하는데 기여하고 싶습니다
       - 자신의 강점
-        - 저의 장점은 의사소통 능력이라고 생각합니다. 그 예로 이번 미니프로젝트에서 저보다 좋은 실력을 가진 동료가 프로젝트를 리드하여 서비스의 구조를 설계하였는데  설명하는 용어들이  어려워서 제대로 이해하지 못했지만 제가 이해한만큼이라도 최대한 구현해서 보여주고 동료에게 피드백을 받고 다시 구현하는 방식으로 점진적으로 소통하여  제가 맡은 부분을 설계한 구조에 맞게 구현할 수 있었습니다. 또한 프로젝트 진행중에 동료에게 회의할 때 사용하는 용어들이 너무 어려워서 커뮤니케이션이 문제가 생기는 것 같다고 솔직하게 이야기하며 도움을 요청했고  동료도 제가 잘이해하지 못하는 부분들에서 이해를 할 수 있게 되어 더많은 소통시간들을 가졌고 그 후로 프로젝트를 잘 마무리할 수 있었습니다.
+        - 저의 장점은 의사소통 능력이라고 생각합니다. 그 예로 이번 미니프로젝트에서 저보다 많은 경력을 가진 동료가 프로젝트를 리드하여 진행하였는데 프로젝트 리더가 사용하는 용어들이 저에게는 너무 어려운 내용이어서 여러번 다시 물어봤지만 이해할 수 가 없었습니다. 하지만 저는 다른 방법으로 소통할 방법을 찾았고 제가 이해한만큼이라도 최대한 구현해서 보여주고 동료에게 피드백을 받고 다시 구현하는 방식으로 점진적으로 소통하여  제가 맡은 부분을 설계한 구조에 맞게 구현할 수 있었습니다. 또한 동료에게 회의할 때 사용하는 용어들이 너무 어려워서 커뮤니케이션이 문제가 생기는 것 같다고 솔직하게 이야기하며 도움을 요청했고 이후 더 많은 소통시간들을 가지며  프로젝트를 잘 마무리할 수 있었습니다.
       - 지원동기(회사에 대한부분) 
         - 밀리의 서재는 전자책 구독형서비스로 단순히 전자책을 대여해주는 것에 그치지 않고 작가와 유명인들이 책을 간추려 읽어주는 오디오북, 책을 채팅형식으로 부당없이 접할 수 있게 도와주는 챗북 서비스, 밀리의 서재 오리지널 종이책 구독서비스로 다양한 독자들에게 다가갈 수 있는 서비르를 가지고 있습니다. 독자들이 그안에서 읽은책들에 대한 감상들을 포스트 할 수 있고 독서를 좋아하는 한사람으로써 이런서비스에 이바지할 수있다는게 스스로에게도 동기부여가 되고 성장하는 회사에서 같이 성장하고 싶은 마음에서 지원하게 되었습니다.
       - 성격의 장단점
@@ -66,7 +66,7 @@
           - 결론적으로는 이런시기를 어떻게 잘보내서 그 준비기간을 짧게하느냐도 빠른 러닝커브를 위해 필요한 능력인 것 같다
       - 개발자 면접을 검색해보니 인성면접보다는 사실 기술 면접에 대한 자료가 많이 나왔고 실제로 당락이 결정되는 중요한 부분이 기술면접이라서 그런것 같다
         - 동료가 매니저에게 면접때 무엇을 준비해냐고 물어봤더니 실력을 준비하라고 그래야 인성면접도 볼수 있으니..라고했던 말이 떠올랐다
-      - 자꾸 질문만처다보고 이렇게쓸까 저렇게 쓸까 고민만하니까 진행이 안된다.. 언능 써보고 고치는게 더빠를 것 같다
+      - 자꾸 질문만처다보고 이렇게쓸까 저렇게 쓸까 고민만하니까 진행이 안된다.. 언능 써보고 고치는게 더 빠를 것 같다
         - 저번 프로젝트에서도 배웠지만 어려운문제를 해결할 때는 머리속으로만 생각하지말고 이해한 것을 바탕으로 작성해보고 그걸 기반으로 피드백 해나가는 접근법이 더빠르다
       - 모든 질문에 답을 달고 싶었지만 위에 저조금 달고 고치는데도 시간이 오래걸려서 자소서를 시작해야되서 마무리 하였다
         - 오랜시간 투자했는데 결과물이 아쉽다.. 다음에는 조금더 좋은 결과물 있길 기대한다..
@@ -82,7 +82,7 @@
         - 좋은 레퍼런스들을 볼 수 있는 사이트를 알게되서 도움이 되었고 학원에서 짜준 자소서 구조가 전부가 아니란걸 게 되었다 
           - 특히 개발자들이 어떤 자소서쓰는지 볼수있으면 더 도움이 될것 같다
         - 학원에서도 이렇게 구조화 한 이유가 있을 텐데 매니저님에게 질의하면 좋을 것 같다
-          - 아마 여러기업에 지원하기 편한 형태의 구조를 짜서 내용만 바꿔서 작성할 수 있도록 편의성을 더한게 아닐까 생각해본다ㄴ
+          - 아마 여러기업에 지원하기 편한 형태의 구조를 짜서 내용만 바꿔서 작성할 수 있도록 편의성을 더한게 아닐까 생각해본다
 
     
 
