--- a/11_2020/20201105-TIL.md
+++ b/11_2020/20201105-TIL.md
@@ -13,11 +13,11 @@
     - 공부방법에 대한 글중 좋은 예제를 여러번 반복해서 해보기에 대한 이야기가 있었다
       - 여러번 반복해서 처음부터 끝까지 구현하는 과정에서 학습이 일어난다는 내용이었는데 틱택토나 과제할 때 여러번 반복해서 했던게 생각나서 공감이 많이갔다
       - 요즘 이렇게 코딩할 시간이 많이 없는데 예제 찾아서 코딩하는데 더 시간을 들여봐야겠다
-  - OKKY에서 읽은 내용들을 동료에게 이야기해주었더니 자기가 보내준 비전공자취업에관한 자료를 읽어봤냐고해서 좋은자료가 있었다는것을 깨닫고 해당 자료를 읽기시작햇다
+  - OKKY에서 읽은 내용들을 동료에게 이야기해주었더니  비전공자취업에관한 좋은 자료를 소개시켜줘서 해당 자료를 읽기시작햇다
     - 생각보다 좋은글과 래퍼런스들이 많아서 한동안은 통학시간에 여기있는 내용들을 공부할 것 같다
     - 자료중 당신이 클론코딩에 실패하는 이유라는 글이 도움이 공감이 많이갔다
-      - 예제마다 레포를 만들어 강의가 끝날때마다 commit하는 습관을 들이면 배운내용을 기록할 수 있을 뿐만 아니라 스스로 향상되기 위해 노력한것들을 기록할 수 있어서 동기부여가 될것이라고 하는 내용이었는데 어제 repo를 개편하고 자료별로나눈것도 이런것들을 시도해보기 위해서였다. 
-      - 따라치는 것에 그치지 않고 듣고 나서 스스로짜보려고 노력하고 전체 예제가 끝난뒤 다시 지우고 혼자 짜보는것을 연습해보기 등의 방법도 중요한 방법인 것 같다
+      - 예제마다 레포를 만들어 강의가 끝날때마다 commit하는 습관을 들이면 배운내용을 기록할 수 있을 뿐만 아니라 스스로 향상되기 위해 노력한것들을 기록할 수 있어서 동기부여가 될것이라고 하는 내용이었는데 어제 repo를 개편하고 자료별로 나눈 것도 이런것들을 시도해보기 위해서였다. 
+      - 따라치는 것에 그치지 않고 듣고 나서 스스로 짜보려고 노력하고 전체 예제가 끝난뒤 다시 지우고 혼자 짜보는것을 연습해보기 등의 방법도 중요한 방법인 것 같다
       - 클론 코딩은 좋은 래퍼런스들을 접할 수 있는 기회이지만 정말 도움이 되려면 이런 노력들이 필요하다는것 다시한번 생각해보게 해주었다
     - 개발자 학습 방법에 대한 글 중 학습을 위한 학습이 되지 않도록 학습 목표에 대해서 명확히 하라는 글이 있었다
       - 공감이 가는게 수업내용정리 하는데 몰입하다보면 시간도 오래걸리고 해당내용을 어떻게 활용할지에 대해서는 간과하게 되는 부분이 있다.
@@ -70,7 +70,7 @@
 
   - 그대신 방식은 강의안을 보충하는 것이 아닌 지금처럼 직접 작성해서 하는 방식으로 하는것을 유지해봐야겠다
 
-- 점심먹고 공부하려는데 너무 피곤해서 눈감고 쉬면서 아침에 이야기한 내가가진 한정된 자원에 대해서 생각해보게 됬다. 한정된 체력, 집중력, 시간을 활용해서 어떻게든 목표에 맞는 결과를 내야하기 때문에 신중하게 고민하고 공부해야 될 것 같다
+- 점심먹고 공부하려는데 너무 피곤해서 눈감고 쉬면서 아침에 이야기한 내가 가진 한정된 자원에 대해서 생각해보게 됬다. 한정된 체력, 집중력, 시간을 활용해서 어떻게든 목표에 맞는 결과를 내야하기 때문에 신중하게 고민하고 공부해야 될 것 같다
 
   - 어떻게 하면 공부를 위한 공부가 되지 않게 할 수 있을까?
 
